# python-project-52

./: .coverage  .env_template  .gitignore  Makefile  README.md  build.sh  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  hexlet-check.yml
task_manager/: middlaware.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  test_labels.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  test_statuses.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  status_forms.py  test_tasks.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  update.html
task_manager/users/: forms.py  test_users.py  urls.py  views.py
